syntax = "proto3";
package koroche;
option go_package = "pkg/api";

import "google/api/annotations.proto";

service Koroche {
  rpc Ping(PingRequest) returns (PingResponse) {
    option (google.api.http) = {
      post: "/v1/ping"
      body: "*"
    };
  }
  rpc AddURL(AddURLRequest) returns (AddURLResponse) {
    option (google.api.http) = {
      post: "/v1/url/add"
      body: "*"
    };
  }
  rpc GetURL(GetURLRequest) returns (GetURLResponse) {
    option (google.api.http) = {
      post: "/v1/url/get"
      body: "*"
    };
  }
}

message PingRequest {
  string value = 1;
}

message PingResponse {
  int64 code = 1;
  string value = 2;
}

message AddURLRequest {
  UserURL user_url = 1;
}

message AddURLResponse {
  ShortURL short_url = 1;
  Error error = 2;
}

message GetURLRequest {
  ShortURL url = 1;
}

message GetURLResponse {
  UserURL user_url = 1;
  Error error = 2;
}

message ShortURL {
  string value = 1;
}

message UserURL {
  string value = 1;
}

message Error {
  string value = 1;
}